--- a/content/i-ching.org
+++ b/content/i-ching.org
@@ -1,3 +1,4 @@
+#+Title: LZ 
 #+BEGIN_EXPORT html
 <script src="https://cdn.jsdelivr.net/npm/scittle@0.5.14/dist/scittle.js"
         type="application/javascript"></script>
