--- a/content/index.org
+++ b/content/index.org
@@ -12,3 +12,4 @@ hi i'm luke - this is my blog
 - [[http://www.lzeitlin.xyz/octohabit/][habit tracker]]
 - [[file:monads-python.org][monads in python]]
 - [[http://www.lzeitlin.xyz/laranjas/][particle system]]
+- [[file:cljs-webgl1.org][webgl in cljs part 1]]
