--- a/content/index.org
+++ b/content/index.org
@@ -15,3 +15,4 @@ hi i'm luke - this is my blog
 - [[file:cljs-webgl1.org][webgl in cljs part 1]]
 - [[file:wfc.org][wave function collapse]]
 - [[http://www.lzeitlin.xyz/vortex-doodle/][scittle and three.js]]
+- [[file:assembly.org][x86-64 assembly]]
