--- a/content/index.org
+++ b/content/index.org
@@ -2,17 +2,34 @@
 hi i'm luke - this is my blog
 
 - [[./convolution.org][convolution]]
+  [2017-07-23]
 - [[file:dft.org][discrete fourier transform]]
+  [2017-07-23]
 - [[file:ring-modulation.org][ring modulation and frequency shifting]]
-- [[file:aes-encryption.org][aes encryption]]
-- [[file:how-this-blog-works.org][how this blog works]] 
-- [[https://larzeitlin.github.io/simple-flashcards][simple flashcards]]
-- [[file:scittle-hilbert-curve.org][scittle hilbert curve]]
-- [[file:i-ching.org][i ching]]
-- [[http://www.lzeitlin.xyz/octohabit/][habit tracker]]
-- [[file:monads-python.org][monads in python]]
-- [[http://www.lzeitlin.xyz/laranjas/][particle system]]
-- [[file:cljs-webgl1.org][webgl in cljs part 1]]
-- [[file:wfc.org][wave function collapse]]
-- [[http://www.lzeitlin.xyz/vortex-doodle/][scittle and three.js]]
+  [2017-11-08]
 - [[file:assembly.org][x86-64 assembly]]
+  [2019-05-12]
+- [[https://larzeitlin.github.io/simple-flashcards][simple flashcards]]
+  [2020-10-22]
+- [[file:aes-encryption.org][aes encryption]]
+  [2020-12-30]
+- [[file:how-this-blog-works.org][how this blog works]] 
+  [2023-02-06]
+- [[file:scittle-hilbert-curve.org][scittle hilbert curve]]
+  [2023-02-22]
+- [[file:i-ching.org][i ching]]
+  [2023-05-25]
+- [[http://www.lzeitlin.xyz/octohabit/][habit tracker]]
+  [2023-08-02]
+- [[file:monads-python.org][monads in python]]
+  [2023-11-12]
+- [[http://www.lzeitlin.xyz/laranjas/][particle system]]
+  [2023-11-19]
+- [[file:cljs-webgl1.org][webgl in cljs part 1]]
+  [2023-11-21]
+- [[file:wfc.org][wave function collapse]]
+  [2024-01-15]
+- [[http://www.lzeitlin.xyz/vortex-doodle/][scittle and three.js]]
+  [2024-02-04]
+
+[[mailto:luke@lzeitlin.xyz][send me an email]]
