--- a/content/index.org
+++ b/content/index.org
@@ -31,5 +31,7 @@ hi i'm luke - this is my blog
   [2024-01-15]
 - [[http://www.lzeitlin.xyz/vortex-doodle/][scittle and three.js]]
   [2024-02-04]
-
+- [[file:resursion.org][feedback loops]]
+  [2024-02-25]
+  
 [[mailto:luke@lzeitlin.xyz][send me an email]]
