--- a/content/index.org
+++ b/content/index.org
@@ -1,35 +1,25 @@
 #+Title: LZ 
 hi i'm luke - this is my blog
 
-- [[./convolution.org][convolution]]
-  [2017-07-23]
-- [[file:dft.org][discrete fourier transform]]
-  [2017-07-23]
-- [[file:ring-modulation.org][ring modulation and frequency shifting]]
-  [2017-11-08]
-- [[file:assembly.org][x86-64 assembly]]
-  [2019-05-12]
-- [[https://larzeitlin.github.io/simple-flashcards][simple flashcards]]
-  [2020-10-22]
-- [[file:aes-encryption.org][aes encryption]]
-  [2020-12-30]
-- [[file:how-this-blog-works.org][how this blog works]] 
-  [2023-02-06]
-- [[file:scittle-hilbert-curve.org][scittle hilbert curve]]
-  [2023-02-22]
-- [[file:i-ching.org][i ching]]
-  [2023-05-25]
-- [[http://www.lzeitlin.xyz/octohabit/][habit tracker]]
-  [2023-08-02]
-- [[http://www.lzeitlin.xyz/laranjas/][particle system]]
-  [2023-11-19]
-- [[file:cljs-webgl1.org][webgl in cljs part 1]]
-  [2023-11-21]
-- [[file:wfc.org][wave function collapse]]
-  [2024-01-15]
-- [[http://www.lzeitlin.xyz/vortex-doodle/][scittle and three.js]]
-  [2024-02-04]
-- [[file:cljs-openlayers.org][cljs / openlayers / pwa]]
-  [2024-07-21]
-  
+
+#+ATTR_HTML: :align center
+| post                                   | tags                                            | date         |
+|----------------------------------------+-------------------------------------------------+--------------|
+| [[./convolution.org][convolution]]                            | dsp, maths                                      | [2017-07-23] |
+| [[file:dft.org][discrete fourier transform]]             | dsp, maths                                      | [2017-07-23] |
+| [[file:ring-modulation.org][ring modulation and frequency shifting]] | dsp, maths                                      | [2017-11-08] |
+| [[file:assembly.org][x86-64 assembly]]                        | programming                                     | [2019-05-12] |
+| [[https://larzeitlin.github.io/simple-flashcards][simple flashcards]]                      | clojure, demo                                   | [2020-10-22] |
+| [[file:aes-encryption.org][aes encryption]]                         | clojure, cryptography                           | [2020-12-30] |
+| [[file:how-this-blog-works.org][how this blog works]]                    | emacs                                           | [2023-02-06] |
+| [[file:scittle-hilbert-curve.org][scittle hilbert curve]]                  | clojure, computer science, scittle, interactive | [2023-02-22] |
+| [[file:i-ching.org][i ching]]                                | clojure, scittle, interactive                   | [2023-05-25] |
+| [[http://www.lzeitlin.xyz/octohabit/][habit tracker]]                          | clojure, scittle, demo                          | [2023-08-02] |
+| [[http://www.lzeitlin.xyz/laranjas/][particle system]]                        | clojure, demo                                   | [2023-11-19] |
+| [[file:cljs-webgl1.org][webgl in cljs part 1]]                   | clojure, graphics                               | [2023-11-21] |
+| [[file:wfc.org][wave function collapse]]                 | clojure, computer sciene, interactive           | [2024-01-15] |
+| [[http://www.lzeitlin.xyz/vortex-doodle/][scittle and three.js]]                   | clojure, scittle, demo, graphics                | [2024-02-04] |
+| [[file:cljs-openlayers.org][cljs / openlayers / pwa]]                | clojure, gis                                    | [2024-07-21] |
+
+
 [[mailto:luke@lzeitlin.xyz][send me an email]]
