lower case the post name

--- a/content/index.org
+++ b/content/index.org
@@ -6,7 +6,7 @@ hi im luke this is my blog and stuff i made
 #+ATTR_HTML: :align center :id index-table
 | post                                   | tags                                            | date         |
 |----------------------------------------+-------------------------------------------------+--------------|
-| [[file:dwarves.org][The Ultimate Charm]]                     | writing, fiction                                | [2024-12-30] |
+| [[file:twarves.org][the ultimate charm]]                     | writing, fiction                                | [2024-12-30] |
 | [[file:illiad.org][illiad]]                                 | scittle, clojure, classics                      | [2024-11-24] |
 | [[file:guile-http.org][guile: http request with sockets]]       | scheme, networking                              | [2024-11-24] |
 | [[file:cljs-openlayers.org][cljs / openlayers / pwa]]                | clojure, gis                                    | [2024-07-21] |
